# SMT

./: .gitignore  CONTRIBUTING.md  Dockerfile  ExperimentConfig.py  ModelManager.py  README.md  SynthGenerator.py  copy_script.py  data.py  eval_functions.py  fp-train-1.py  fp-train-2.py  main.py  predict_single_sample.py  predict_single_sample_ctc.py  pyproject.toml  repro_synth.py  requirements.txt  smt_trainer.py  test.py  test_ctc.py  test_hf_arch.py  test_hf_config.py  test_init.py  test_qwen.py  train.py  train_ctc.py  transcribe_single_score.py  utils.py  verify_ds_vision.py  visualize_diffs.py  visualize_single_sample.py
config/: DAN_NexT.gin
config/Camera_GrandStaff/: c_grandstaff.json
config/FP-GrandStaff/: finetuning.json  pretraining.json
config/FP-Mozarteum/: finetuning.json  pretraining.json
config/FP-Polish_Scores/: finetuning.json  pretraining.json
config/GrandStaff/: CNNSMT.gin  CNNSMT_Camera.gin  DAN_NexT_Dist.gin  DAN_Swin.gin  NEXTSMT.gin  NEXTSMT_Camera.gin  grandstaff.json
config/Mozarteum/: finetuning.json
config/Polish_Scores/: finetuning.json
config/StringQuartets/: Baseline.gin  Baseline_dist.gin  CNNSMT.gin  DAN_B.gin  (+4 more)
data_augmentation/: data_augmentation.py
model/: ConvNextEncoder.py  DANDecoder.py  DANEncoder.py  Decoder.py  E2EScoreUnfolding.py
smt_model/: __init__.py  configuration_smt.py  modeling_smt.py
test/: mha_test.py  test_data.py
visualizer/: WeightsVisualizer.py
vocab/: GrandStaffGlobali2w.npy  GrandStaffGlobalw2i.npy  GrandStaffi2w.npy  GrandStaffw2i.npy  QuartetsGlobali2w.npy  QuartetsGlobalw2i.npy
(+10 files in other folders)
