[project]
name = "smt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.3.2",
    "fire>=0.7.0",
    "lightning>=2.5.0.post0",
    "loguru>=0.7.3",
    "opencv-python>=4.11.0.86",
    "pytest>=8.3.4",
    "rich>=13.9.4",
    "scikit-image>=0.25.2",
    "torch>=2.6.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.21.0",
    "transformers>=4.49.0",
    "wandb>=0.19.7",
]
